--- a/Practics.ipynb
+++ b/Practics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "06677e8a-a531-4420-96a4-ea79cd609e8e",
    "metadata": {},
    "outputs": [
@@ -112,7 +112,7 @@
        "4        5  Abhishek     10     55       60       58     62    235       58.75"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "34d91c26-88f1-4532-a7b8-61b9d9263259",
    "metadata": {},
    "outputs": [
@@ -260,7 +260,7 @@
        "4       58.75     D  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "050e74ee-b2ef-4c7f-9aaa-868111ff3a66",
    "metadata": {},
    "outputs": [
@@ -413,7 +413,7 @@
        "4       58.75     D     5  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "34c18050-eef9-45fa-b5a2-edc67856d2bc",
    "metadata": {},
    "outputs": [
@@ -1173,7 +1173,7 @@
        "49   47  Female  Bangalore          121752  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1187,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "56891496-3f78-42df-9e52-4910eda7ace6",
    "metadata": {},
    "outputs": [
@@ -1197,7 +1197,7 @@
        "np.int64(50)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1208,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "7ae3dccc-2cc5-4d83-b22b-01b205b1bb16",
    "metadata": {},
    "outputs": [
@@ -1218,7 +1218,7 @@
        "5"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1230,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "b197cb76-3ae7-49af-9c7a-cd1c82425530",
    "metadata": {},
    "outputs": [
@@ -1417,7 +1417,7 @@
        "36    Male    Chennai           81491  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1428,7 +1428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "97b53f35-2af1-439b-b2fa-5de5bb813eed",
    "metadata": {},
    "outputs": [
@@ -1853,7 +1853,7 @@
        "49   47  Female  Bangalore          121752  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1864,7 +1864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "f0345d40-17fb-4fb7-801c-9edcfe570098",
    "metadata": {},
    "outputs": [
@@ -1874,7 +1874,7 @@
        "np.int64(15)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1886,7 +1886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "a4707dc8-a469-414b-8d86-47aa569d061a",
    "metadata": {},
    "outputs": [
@@ -1896,7 +1896,7 @@
        "np.float64(39.76)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1907,7 +1907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "7789d668-f359-4538-a5c0-aed93af918ea",
    "metadata": {},
    "outputs": [
@@ -1926,7 +1926,7 @@
        "Name: 37, dtype: object"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1938,7 +1938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "6b869337-d3ca-467d-b8d3-8a25186a2ffc",
    "metadata": {},
    "outputs": [
@@ -1957,7 +1957,7 @@
        "Name: 48, dtype: object"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1968,7 +1968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "id": "1dc2d9c1-128f-4935-9760-5af08029cf80",
    "metadata": {},
    "outputs": [
@@ -2281,7 +2281,7 @@
        "46   22  Female      Delhi           58828  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2292,7 +2292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "id": "b324fe8f-afee-4177-8db7-402228da6abc",
    "metadata": {},
    "outputs": [
@@ -2302,7 +2302,7 @@
        "np.float64(67261.9)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2314,7 +2314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 15,
    "id": "1d7139e3-aab3-41d8-9123-0d3f26e544ae",
    "metadata": {},
    "outputs": [
@@ -2341,7 +2341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 16,
    "id": "00786c9e-3133-4500-b1eb-80df5094a6fe",
    "metadata": {},
    "outputs": [
@@ -2369,7 +2369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 17,
    "id": "6e632584-c844-495a-aaaa-89f4788527c4",
    "metadata": {},
    "outputs": [
@@ -2414,7 +2414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 18,
    "id": "a23bf4f6-7e50-42ca-9510-a3a5f197e054",
    "metadata": {},
    "outputs": [
@@ -2422,40 +2422,40 @@
      "data": {
       "text/plain": [
        "Experience_Years\n",
-       "1      62014\n",
-       "2      64039\n",
-       "3      70951\n",
-       "4      80488\n",
-       "5      28420\n",
-       "6      28436\n",
-       "7      88381\n",
-       "8     109035\n",
-       "9     138534\n",
-       "10     98473\n",
-       "11     61212\n",
-       "12     60762\n",
-       "13     92860\n",
-       "14     60056\n",
-       "15    102797\n",
-       "16    120533\n",
-       "17     58516\n",
-       "18     54110\n",
-       "19     68525\n",
-       "Name: Monthly_Salary, dtype: int64"
+       "1      62014.666667\n",
+       "2      64039.500000\n",
+       "3      70951.333333\n",
+       "4      80488.750000\n",
+       "5      28420.000000\n",
+       "6      28436.000000\n",
+       "7      88381.000000\n",
+       "8     109035.166667\n",
+       "9     138534.500000\n",
+       "10     98473.000000\n",
+       "11     61212.000000\n",
+       "12     60762.000000\n",
+       "13     92860.666667\n",
+       "14     60056.666667\n",
+       "15    102797.200000\n",
+       "16    120533.500000\n",
+       "17     58516.000000\n",
+       "18     54110.333333\n",
+       "19     68525.000000\n",
+       "Name: Monthly_Salary, dtype: float64"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.groupby('Experience_Years')['Monthly_Salary'].mean().astype(int)"
+    "df.groupby('Experience_Years')['Monthly_Salary'].mean().astype(float)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 19,
    "id": "95c6b447-0fc5-4748-8f93-a5c39e13a15f",
    "metadata": {},
    "outputs": [
@@ -2465,7 +2465,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2482,6 +2482,39 @@
    ],
    "source": [
     "df['Monthly_Salary'].plot.box()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "97d6f4bc-935d-48f0-bee9-77c68728a03c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "InvalidIndexError",
+     "evalue": "(0     False\n1     False\n2     False\n3     False\n4     False\n5     False\n6     False\n7     False\n8     False\n9     False\n10    False\n11    False\n12    False\n13    False\n14    False\n15    False\n16    False\n17    False\n18     True\n19    False\n20    False\n21    False\n22    False\n23     True\n24     True\n25    False\n26    False\n27    False\n28    False\n29    False\n30    False\n31    False\n32    False\n33     True\n34    False\n35    False\n36    False\n37    False\n38     True\n39    False\n40    False\n41     True\n42    False\n43    False\n44    False\n45     True\n46    False\n47    False\n48    False\n49    False\nName: Department, dtype: bool, 0      True\n1     False\n2     False\n3     False\n4      True\n5     False\n6     False\n7     False\n8     False\n9     False\n10     True\n11     True\n12    False\n13    False\n14    False\n15     True\n16    False\n17    False\n18    False\n19    False\n20    False\n21    False\n22     True\n23    False\n24     True\n25    False\n26     True\n27     True\n28    False\n29    False\n30    False\n31    False\n32     True\n33     True\n34     True\n35    False\n36    False\n37     True\n38    False\n39    False\n40     True\n41    False\n42    False\n43    False\n44    False\n45    False\n46    False\n47    False\n48    False\n49     True\nName: Monthly_Salary, dtype: bool)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Roaming\\Python\\Python313\\site-packages\\pandas\\core\\indexes\\base.py:3812\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3811\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m3812\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_engine\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   3813\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/index.pyx:167\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/index.pyx:173\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[31mTypeError\u001b[39m: '(0     False\n1     False\n2     False\n3     False\n4     False\n5     False\n6     False\n7     False\n8     False\n9     False\n10    False\n11    False\n12    False\n13    False\n14    False\n15    False\n16    False\n17    False\n18     True\n19    False\n20    False\n21    False\n22    False\n23     True\n24     True\n25    False\n26    False\n27    False\n28    False\n29    False\n30    False\n31    False\n32    False\n33     True\n34    False\n35    False\n36    False\n37    False\n38     True\n39    False\n40    False\n41     True\n42    False\n43    False\n44    False\n45     True\n46    False\n47    False\n48    False\n49    False\nName: Department, dtype: bool, 0      True\n1     False\n2     False\n3     False\n4      True\n5     False\n6     False\n7     False\n8     False\n9     False\n10     True\n11     True\n12    False\n13    False\n14    False\n15     True\n16    False\n17    False\n18    False\n19    False\n20    False\n21    False\n22     True\n23    False\n24     True\n25    False\n26     True\n27     True\n28    False\n29    False\n30    False\n31    False\n32     True\n33     True\n34     True\n35    False\n36    False\n37     True\n38    False\n39    False\n40     True\n41    False\n42    False\n43    False\n44    False\n45    False\n46    False\n47    False\n48    False\n49     True\nName: Monthly_Salary, dtype: bool)' is an invalid key",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[31mInvalidIndexError\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[32]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mDepartment\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m==\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mHR\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mMonthly_Salary\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m>\u001b[49m\u001b[32;43m100000\u001b[39;49m\u001b[43m]\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Roaming\\Python\\Python313\\site-packages\\pandas\\core\\frame.py:4113\u001b[39m, in \u001b[36mDataFrame.__getitem__\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   4111\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.columns.nlevels > \u001b[32m1\u001b[39m:\n\u001b[32m   4112\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._getitem_multilevel(key)\n\u001b[32m-> \u001b[39m\u001b[32m4113\u001b[39m indexer = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   4114\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[32m   4115\u001b[39m     indexer = [indexer]\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Roaming\\Python\\Python313\\site-packages\\pandas\\core\\indexes\\base.py:3824\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3819\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01merr\u001b[39;00m\n\u001b[32m   3820\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[32m   3821\u001b[39m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[32m   3822\u001b[39m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[32m   3823\u001b[39m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m3824\u001b[39m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_check_indexing_error\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   3825\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Roaming\\Python\\Python313\\site-packages\\pandas\\core\\indexes\\base.py:6072\u001b[39m, in \u001b[36mIndex._check_indexing_error\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   6068\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m_check_indexing_error\u001b[39m(\u001b[38;5;28mself\u001b[39m, key):\n\u001b[32m   6069\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m is_scalar(key):\n\u001b[32m   6070\u001b[39m         \u001b[38;5;66;03m# if key is not a scalar, directly raise an error (the code below\u001b[39;00m\n\u001b[32m   6071\u001b[39m         \u001b[38;5;66;03m# would convert to numpy arrays and raise later any way) - GH29926\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m6072\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n",
+      "\u001b[31mInvalidIndexError\u001b[39m: (0     False\n1     False\n2     False\n3     False\n4     False\n5     False\n6     False\n7     False\n8     False\n9     False\n10    False\n11    False\n12    False\n13    False\n14    False\n15    False\n16    False\n17    False\n18     True\n19    False\n20    False\n21    False\n22    False\n23     True\n24     True\n25    False\n26    False\n27    False\n28    False\n29    False\n30    False\n31    False\n32    False\n33     True\n34    False\n35    False\n36    False\n37    False\n38     True\n39    False\n40    False\n41     True\n42    False\n43    False\n44    False\n45     True\n46    False\n47    False\n48    False\n49    False\nName: Department, dtype: bool, 0      True\n1     False\n2     False\n3     False\n4      True\n5     False\n6     False\n7     False\n8     False\n9     False\n10     True\n11     True\n12    False\n13    False\n14    False\n15     True\n16    False\n17    False\n18    False\n19    False\n20    False\n21    False\n22     True\n23    False\n24     True\n25    False\n26     True\n27     True\n28    False\n29    False\n30    False\n31    False\n32     True\n33     True\n34     True\n35    False\n36    False\n37     True\n38    False\n39    False\n40     True\n41    False\n42    False\n43    False\n44    False\n45    False\n46    False\n47    False\n48    False\n49     True\nName: Monthly_Salary, dtype: bool)"
+     ]
+    }
+   ],
+   "source": [
+    "df[df['Department']=='HR',df['Monthly_Salary']>100000]\n",
+    "\n",
+    "\n"
    ]
   }
  ],
