--- a/Practics.ipynb
+++ b/Practics.ipynb
@@ -2486,36 +2486,253 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 21,
    "id": "97d6f4bc-935d-48f0-bee9-77c68728a03c",
    "metadata": {},
    "outputs": [
     {
-     "ename": "InvalidIndexError",
-     "evalue": "(0     False\n1     False\n2     False\n3     False\n4     False\n5     False\n6     False\n7     False\n8     False\n9     False\n10    False\n11    False\n12    False\n13    False\n14    False\n15    False\n16    False\n17    False\n18     True\n19    False\n20    False\n21    False\n22    False\n23     True\n24     True\n25    False\n26    False\n27    False\n28    False\n29    False\n30    False\n31    False\n32    False\n33     True\n34    False\n35    False\n36    False\n37    False\n38     True\n39    False\n40    False\n41     True\n42    False\n43    False\n44    False\n45     True\n46    False\n47    False\n48    False\n49    False\nName: Department, dtype: bool, 0      True\n1     False\n2     False\n3     False\n4      True\n5     False\n6     False\n7     False\n8     False\n9     False\n10     True\n11     True\n12    False\n13    False\n14    False\n15     True\n16    False\n17    False\n18    False\n19    False\n20    False\n21    False\n22     True\n23    False\n24     True\n25    False\n26     True\n27     True\n28    False\n29    False\n30    False\n31    False\n32     True\n33     True\n34     True\n35    False\n36    False\n37     True\n38    False\n39    False\n40     True\n41    False\n42    False\n43    False\n44    False\n45    False\n46    False\n47    False\n48    False\n49     True\nName: Monthly_Salary, dtype: bool)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Roaming\\Python\\Python313\\site-packages\\pandas\\core\\indexes\\base.py:3812\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3811\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m3812\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_engine\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   3813\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/index.pyx:167\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/index.pyx:173\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[31mTypeError\u001b[39m: '(0     False\n1     False\n2     False\n3     False\n4     False\n5     False\n6     False\n7     False\n8     False\n9     False\n10    False\n11    False\n12    False\n13    False\n14    False\n15    False\n16    False\n17    False\n18     True\n19    False\n20    False\n21    False\n22    False\n23     True\n24     True\n25    False\n26    False\n27    False\n28    False\n29    False\n30    False\n31    False\n32    False\n33     True\n34    False\n35    False\n36    False\n37    False\n38     True\n39    False\n40    False\n41     True\n42    False\n43    False\n44    False\n45     True\n46    False\n47    False\n48    False\n49    False\nName: Department, dtype: bool, 0      True\n1     False\n2     False\n3     False\n4      True\n5     False\n6     False\n7     False\n8     False\n9     False\n10     True\n11     True\n12    False\n13    False\n14    False\n15     True\n16    False\n17    False\n18    False\n19    False\n20    False\n21    False\n22     True\n23    False\n24     True\n25    False\n26     True\n27     True\n28    False\n29    False\n30    False\n31    False\n32     True\n33     True\n34     True\n35    False\n36    False\n37     True\n38    False\n39    False\n40     True\n41    False\n42    False\n43    False\n44    False\n45    False\n46    False\n47    False\n48    False\n49     True\nName: Monthly_Salary, dtype: bool)' is an invalid key",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[31mInvalidIndexError\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[32]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mDepartment\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m==\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mHR\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mMonthly_Salary\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m>\u001b[49m\u001b[32;43m100000\u001b[39;49m\u001b[43m]\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Roaming\\Python\\Python313\\site-packages\\pandas\\core\\frame.py:4113\u001b[39m, in \u001b[36mDataFrame.__getitem__\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   4111\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.columns.nlevels > \u001b[32m1\u001b[39m:\n\u001b[32m   4112\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._getitem_multilevel(key)\n\u001b[32m-> \u001b[39m\u001b[32m4113\u001b[39m indexer = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   4114\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[32m   4115\u001b[39m     indexer = [indexer]\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Roaming\\Python\\Python313\\site-packages\\pandas\\core\\indexes\\base.py:3824\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3819\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01merr\u001b[39;00m\n\u001b[32m   3820\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[32m   3821\u001b[39m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[32m   3822\u001b[39m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[32m   3823\u001b[39m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m3824\u001b[39m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_check_indexing_error\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   3825\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Roaming\\Python\\Python313\\site-packages\\pandas\\core\\indexes\\base.py:6072\u001b[39m, in \u001b[36mIndex._check_indexing_error\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   6068\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m_check_indexing_error\u001b[39m(\u001b[38;5;28mself\u001b[39m, key):\n\u001b[32m   6069\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m is_scalar(key):\n\u001b[32m   6070\u001b[39m         \u001b[38;5;66;03m# if key is not a scalar, directly raise an error (the code below\u001b[39;00m\n\u001b[32m   6071\u001b[39m         \u001b[38;5;66;03m# would convert to numpy arrays and raise later any way) - GH29926\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m6072\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n",
-      "\u001b[31mInvalidIndexError\u001b[39m: (0     False\n1     False\n2     False\n3     False\n4     False\n5     False\n6     False\n7     False\n8     False\n9     False\n10    False\n11    False\n12    False\n13    False\n14    False\n15    False\n16    False\n17    False\n18     True\n19    False\n20    False\n21    False\n22    False\n23     True\n24     True\n25    False\n26    False\n27    False\n28    False\n29    False\n30    False\n31    False\n32    False\n33     True\n34    False\n35    False\n36    False\n37    False\n38     True\n39    False\n40    False\n41     True\n42    False\n43    False\n44    False\n45     True\n46    False\n47    False\n48    False\n49    False\nName: Department, dtype: bool, 0      True\n1     False\n2     False\n3     False\n4      True\n5     False\n6     False\n7     False\n8     False\n9     False\n10     True\n11     True\n12    False\n13    False\n14    False\n15     True\n16    False\n17    False\n18    False\n19    False\n20    False\n21    False\n22     True\n23    False\n24     True\n25    False\n26     True\n27     True\n28    False\n29    False\n30    False\n31    False\n32     True\n33     True\n34     True\n35    False\n36    False\n37     True\n38    False\n39    False\n40     True\n41    False\n42    False\n43    False\n44    False\n45    False\n46    False\n47    False\n48    False\n49     True\nName: Monthly_Salary, dtype: bool)"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>EmployeeID</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Department</th>\n",
+       "      <th>Experience_Years</th>\n",
+       "      <th>Education_Level</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Monthly_Salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>25</td>\n",
+       "      <td>Employee_25</td>\n",
+       "      <td>HR</td>\n",
+       "      <td>8</td>\n",
+       "      <td>High School</td>\n",
+       "      <td>34</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Bangalore</td>\n",
+       "      <td>132455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>34</td>\n",
+       "      <td>Employee_34</td>\n",
+       "      <td>HR</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Bachelor</td>\n",
+       "      <td>53</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Delhi</td>\n",
+       "      <td>134616</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    EmployeeID         Name Department  Experience_Years Education_Level  Age  \\\n",
+       "24          25  Employee_25         HR                 8     High School   34   \n",
+       "33          34  Employee_34         HR                15        Bachelor   53   \n",
+       "\n",
+       "    Gender       City  Monthly_Salary  \n",
+       "24  Female  Bangalore          132455  \n",
+       "33  Female      Delhi          134616  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[df['Department']=='HR',df['Monthly_Salary']>100000]\n",
+    "df[(df['Department']=='HR')&(df['Monthly_Salary']>100000)]\n",
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "8079be0f-4efe-4648-b8eb-82367d285749",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Education_Level\n",
+       "Bachelor        9\n",
+       "High School    12\n",
+       "Master         19\n",
+       "PhD            10\n",
+       "Name: EmployeeID, dtype: int64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby('Education_Level')['EmployeeID'].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "74868fcd-d138-4f20-8e69-b96d5000c404",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>EmployeeID</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Department</th>\n",
+       "      <th>Experience_Years</th>\n",
+       "      <th>Education_Level</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Monthly_Salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>38</td>\n",
+       "      <td>Employee_38</td>\n",
+       "      <td>Operations</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Master</td>\n",
+       "      <td>23</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Mumbai</td>\n",
+       "      <td>149123</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>11</td>\n",
+       "      <td>Employee_11</td>\n",
+       "      <td>Marketing</td>\n",
+       "      <td>8</td>\n",
+       "      <td>PhD</td>\n",
+       "      <td>43</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Delhi</td>\n",
+       "      <td>141381</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>34</td>\n",
+       "      <td>Employee_34</td>\n",
+       "      <td>HR</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Bachelor</td>\n",
+       "      <td>53</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Delhi</td>\n",
+       "      <td>134616</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>25</td>\n",
+       "      <td>Employee_25</td>\n",
+       "      <td>HR</td>\n",
+       "      <td>8</td>\n",
+       "      <td>High School</td>\n",
+       "      <td>34</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Bangalore</td>\n",
+       "      <td>132455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Employee_5</td>\n",
+       "      <td>Operations</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Master</td>\n",
+       "      <td>36</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Delhi</td>\n",
+       "      <td>132450</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    EmployeeID         Name  Department  Experience_Years Education_Level  \\\n",
+       "37          38  Employee_38  Operations                 9          Master   \n",
+       "10          11  Employee_11   Marketing                 8             PhD   \n",
+       "33          34  Employee_34          HR                15        Bachelor   \n",
+       "24          25  Employee_25          HR                 8     High School   \n",
+       "4            5   Employee_5  Operations                15          Master   \n",
+       "\n",
+       "    Age  Gender       City  Monthly_Salary  \n",
+       "37   23    Male     Mumbai          149123  \n",
+       "10   43    Male      Delhi          141381  \n",
+       "33   53  Female      Delhi          134616  \n",
+       "24   34  Female  Bangalore          132455  \n",
+       "4    36  Female      Delhi          132450  "
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.sort_values(by='Monthly_Salary',ascending=False).head(5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c20b4ca-cf1b-449b-8813-cb9b7e9c1cc5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
