--- a/Practics.ipynb
+++ b/Practics.ipynb
@@ -2827,8 +2827,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "a172bb24-7f7f-4c9e-8a23-245a9b0eea71",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "City\n",
+       "Bangalore    99004.090909\n",
+       "Delhi        93332.466667\n",
+       "Mumbai       75531.714286\n",
+       "Hyderabad    67482.333333\n",
+       "Chennai      57379.600000\n",
+       "Name: Monthly_Salary, dtype: float64"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby('City')['Monthly_Salary'].mean().sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "e1f77174-44d8-4bf2-a936-56987ce79ff1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.07422086183046225)"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Experience_Years'].corr(df['Monthly_Salary'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e530fde5-8766-442f-85b1-d3c63622902f",
    "metadata": {},
    "outputs": [],
    "source": []
