--- a/Practics.ipynb
+++ b/Practics.ipynb
@@ -2875,206 +2875,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 48,
    "id": "e530fde5-8766-442f-85b1-d3c63622902f",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>EmployeeID</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Department</th>\n",
-       "      <th>Experience_Years</th>\n",
-       "      <th>Education_Level</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Gender</th>\n",
-       "      <th>City</th>\n",
-       "      <th>Monthly_Salary</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Employee_4</td>\n",
-       "      <td>Operations</td>\n",
-       "      <td>8</td>\n",
-       "      <td>PhD</td>\n",
-       "      <td>44</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Delhi</td>\n",
-       "      <td>95091</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>7</td>\n",
-       "      <td>Employee_7</td>\n",
-       "      <td>IT</td>\n",
-       "      <td>14</td>\n",
-       "      <td>PhD</td>\n",
-       "      <td>57</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Mumbai</td>\n",
-       "      <td>70525</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>8</td>\n",
-       "      <td>Employee_8</td>\n",
-       "      <td>IT</td>\n",
-       "      <td>17</td>\n",
-       "      <td>PhD</td>\n",
-       "      <td>34</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>Bangalore</td>\n",
-       "      <td>44830</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>11</td>\n",
-       "      <td>Employee_11</td>\n",
-       "      <td>Marketing</td>\n",
-       "      <td>8</td>\n",
-       "      <td>PhD</td>\n",
-       "      <td>43</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Delhi</td>\n",
-       "      <td>141381</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>15</td>\n",
-       "      <td>Employee_15</td>\n",
-       "      <td>Marketing</td>\n",
-       "      <td>10</td>\n",
-       "      <td>PhD</td>\n",
-       "      <td>49</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>Mumbai</td>\n",
-       "      <td>99290</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>18</td>\n",
-       "      <td>Employee_18</td>\n",
-       "      <td>Operations</td>\n",
-       "      <td>12</td>\n",
-       "      <td>PhD</td>\n",
-       "      <td>51</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>Chennai</td>\n",
-       "      <td>44738</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>19</td>\n",
-       "      <td>Employee_19</td>\n",
-       "      <td>HR</td>\n",
-       "      <td>2</td>\n",
-       "      <td>PhD</td>\n",
-       "      <td>32</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Chennai</td>\n",
-       "      <td>55746</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41</th>\n",
-       "      <td>42</td>\n",
-       "      <td>Employee_42</td>\n",
-       "      <td>HR</td>\n",
-       "      <td>11</td>\n",
-       "      <td>PhD</td>\n",
-       "      <td>23</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Chennai</td>\n",
-       "      <td>61212</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>45</th>\n",
-       "      <td>46</td>\n",
-       "      <td>Employee_46</td>\n",
-       "      <td>HR</td>\n",
-       "      <td>3</td>\n",
-       "      <td>PhD</td>\n",
-       "      <td>54</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>Hyderabad</td>\n",
-       "      <td>88208</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48</th>\n",
-       "      <td>49</td>\n",
-       "      <td>Employee_49</td>\n",
-       "      <td>Finance</td>\n",
-       "      <td>5</td>\n",
-       "      <td>PhD</td>\n",
-       "      <td>23</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>Hyderabad</td>\n",
-       "      <td>28420</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "    EmployeeID         Name  Department  Experience_Years Education_Level  \\\n",
-       "3            4   Employee_4  Operations                 8             PhD   \n",
-       "6            7   Employee_7          IT                14             PhD   \n",
-       "7            8   Employee_8          IT                17             PhD   \n",
-       "10          11  Employee_11   Marketing                 8             PhD   \n",
-       "14          15  Employee_15   Marketing                10             PhD   \n",
-       "17          18  Employee_18  Operations                12             PhD   \n",
-       "18          19  Employee_19          HR                 2             PhD   \n",
-       "41          42  Employee_42          HR                11             PhD   \n",
-       "45          46  Employee_46          HR                 3             PhD   \n",
-       "48          49  Employee_49     Finance                 5             PhD   \n",
-       "\n",
-       "    Age  Gender       City  Monthly_Salary  \n",
-       "3    44    Male      Delhi           95091  \n",
-       "6    57    Male     Mumbai           70525  \n",
-       "7    34  Female  Bangalore           44830  \n",
-       "10   43    Male      Delhi          141381  \n",
-       "14   49  Female     Mumbai           99290  \n",
-       "17   51  Female    Chennai           44738  \n",
-       "18   32    Male    Chennai           55746  \n",
-       "41   23    Male    Chennai           61212  \n",
-       "45   54  Female  Hyderabad           88208  \n",
-       "48   23  Female  Hyderabad           28420  "
+       "np.float64(72944.1)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[df['Education_Level']=='PhD']"
+    "df[df['Education_Level']=='PhD']['Monthly_Salary'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "424c366e-d8cb-4d3b-bf85-e4e339347794",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(82441.77777777778)"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['Education_Level']=='Bachelor']['Monthly_Salary'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "f3bb538b-5621-48e2-9172-7ebe2f2c3c7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Department  Gender\n",
+       "Finance     Female     74754.666667\n",
+       "            Male       56022.750000\n",
+       "HR          Female    118426.333333\n",
+       "            Male       56334.250000\n",
+       "IT          Female     81835.400000\n",
+       "            Male       71205.600000\n",
+       "Marketing   Female     88814.571429\n",
+       "            Male      105316.500000\n",
+       "Operations  Female     87096.833333\n",
+       "            Male       79954.500000\n",
+       "Name: Monthly_Salary, dtype: float64"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby(['Department','Gender'])['Monthly_Salary'].mean()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "424c366e-d8cb-4d3b-bf85-e4e339347794",
+   "id": "3e01a4f1-c779-4168-a60e-8275c1a78461",
    "metadata": {},
    "outputs": [],
    "source": []
